--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 
     <h3><a href ="./movie-ranking.html"> Movie ranking project</a></h3>
-    <img src="../assets/images/movie-ranking.png"   alt="movie ranking project" width="200px" height="200px">
+    <img src="movie-ranking.png"   alt="movie ranking project" width="200px" height="200px">
 
     <h3><a href ="anniversairecard.html"> Birthday card</a></h3>
-    <img src="../assets/images/cake.png" alt="birthday card" width="200px" height="200px">
+    <img src="cake.png" alt="birthday card" width="200px" height="200px">
 
     <hr>
 
